--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -34,7 +34,7 @@ window#waybar {
     border-radius: 20px;
     border: 1px solid #000000;
     color: #38114A;
-    background-color: #38114A;
+    background-color: #171B20;
     transition: all 0.3s;
     opacity: 0.4;
 }
@@ -44,7 +44,7 @@ window#waybar {
     margin: 4px 3px 4px 3px;
     padding: 0px 3px 0px 3px;
     border-radius: 20px;
-    border: 1px solid #94378F;
+    border: 1px solid #FA862D;
     transition: all 0.3s;
     opacity: 1.0;
 }
@@ -205,12 +205,13 @@ window#waybar.empty #window {
  * ----------------------------------------------------- */
 
 #clock {
-    /*background-color: #0C252C;*/
+    /*background-color: #000000;*/
     border-radius: 18px;
     padding: 9px 8px 5px 8px;
-    /*border: 2px solid #000000;*/
+    /*border: 1px solid #000000;*/
     font-size: 18px;
-    color: #FFFFFF;
+    font-weight: 900;
+    color: #000000;
     margin: 4px 4px 4px 4px;
     opacity: 1.0;
     opacity: 1.0;
@@ -295,7 +296,7 @@ window#waybar.empty #window {
 #battery {
     /*background-color: #0C252C;*/
     font-size: 12px;
-    color: #ffffff;
+    color: #FFFFFF;
     border-radius: 18px;
     /*border: 2px solid #000000;*/
     padding: 6px 10px 3px 11px;
@@ -309,12 +310,12 @@ window#waybar.empty #window {
 @keyframes blink {
     to {
         background-color: #0C252C;
-        color: #ffffff;
+        color: #FFFFFF;
     }
 }
 #battery.critical:not(.charging) {
     background-color: #f53c3c;
-    color: #ffffff;
+    color: #FFFFFF;
     animation-name: blink;
     animation-duration: 0.5s;
     animation-timing-function: linear;
@@ -328,7 +329,7 @@ window#waybar.empty #window {
 #tray {
     /*background-color: #0C252C;*/
     font-size: 12px;
-    color: #ffffff;
+    color: #000000;
     border-radius: 18px;
     /*border: 2px solid #000000;*/
     padding: 4px 12px 3px 11px;
@@ -341,6 +342,3 @@ window#waybar.empty #window {
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
 }
-
-
-
